# webpage

./: .dockerignore  .gitignore  .gitlab-ci.new.yml  .gitlab-ci.yml  Cargo.toml  Dockerfile  db.sqlite3  import.py  members.json  members.sql  requirements.txt
backend/: .gitignore  2019-07-22-21-38  Cargo.toml  Rocket.toml  db.sqlite3  db.sqlite3.bkp  db.sqlite3.bkp2  db.sqlite3.bkp3  import.py
backend/config/: default.toml  local.toml  production.toml  staging.toml
backend/migrations/2019-05-08-213710_create_initial_tables/: up.sql
backend/migrations/2019-07-06-204018_add_sections/: down.sql  up.sql
backend/migrations/2019-09-01-132523_add_kids_section/: down.sql  up.sql
backend/migrations/2019-09-17-195727_add_login/: down.sql  up.sql
backend/migrations/2019-10-20-002515_add_bills/: up.sql
backend/migrations/2019-10-20-002515_add_invoices/: up.sql
backend/migrations/2019-12-11-204921_merge_member_type/: down.sql  up.sql
backend/migrations/2020-01-04-221932_add_first_club_remove_email_allowed/: down.sql  up.sql
backend/src/: config.rs  config.toml  context.rs  email.rs  error.rs  login.rs  main.rs  schema.rs  tera_engine.rs  user.rs
backend/src/bills/: actions.rs  model.rs
backend/src/blog/: entry.rs  mod.rs
backend/src/commander/: bills.rs  cli.rs  invoices.rs  mod.rs
backend/src/events/: actions.rs  mod.rs  model.rs
backend/src/invoices/: actions.rs  model.rs
backend/src/members/: actions.rs  model.rs
backend/src/routes/: bills.rs  blog.rs  events.rs  invoices.rs  members.rs  mod.rs  root.rs
backend/templates/: layout.html.tera  login.html.tera  password_recovery.html.tera
backend/templates/generic/: invoice.html.tera  invoice_email.tera  invoice_yearly.html.tera  password_recovery_email.tera
backend/templates/pages/: club.html.tera  index.html.tera  judo.html.tera  jujitsu.html.tera  kontakt.html.tera
backend/templates/pages/blog/: edit.html.tera
backend/templates/pages/invoices/: generate.html.tera  manage.html.tera
backend/templates/pages/members/: invoice_template.html.tera  list.html.tera  stats.html.tera  view.html.tera
frontend/: .gitignore  package.json
frontend/src/: contact.js
frontend/src/members/: add_member.js  badges.js  detail.js  events.js  family.js  helpers.js  list.js  view.js
frontend/src/members/scss/: list.scss
frontend/static/: index.html
migrations/2019-05-08-213710_create_initial_tables/: down.sql  up.sql
migrations/2019-05-08-213710_create_members/: up.sql
scripts/: build_docker.sh  jjjcaarau.ch.conf  new.jjjcaarau.ch.conf  restart_production.sh  restart_staging.sh  run_docker.sh  setup-remote.sh  setup.sh  staging.jjjcaarau.ch.conf  startup.sh
scripts/scripts/: restart_production.sh  restart_staging.sh  setup.sh  startup.sh  zigzag-web.conf  zigzag-web.service
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/json/: event.rs  member.rs  mod.rs  tag.rs
src/: db.rs  main.rs  schema.rs
src/events/: mod.rs  model.rs
src/members/: actions.rs  model.rs
src/routes/: members.rs  mod.rs  root.rs
static/css/: ie_only.css  style.css
static/css/pages/: club.css  contact.css  dojo.css  index.css  judo.css  jujitsu.css  map.css
static/css/pages/members/: stats.css  view.css
static/js/: calendar.js  judo.js  jujitsu.js  list.js  list.js.map  view.css  view.css.map  view.js  view.js.map
static/js/members/: badges.js  event_list.js  family.js  list.js  view.js
static/js/scss/: list.css  list.css.map  list.js  list.js.map
templates/: layout.html.tera
templates/pages/: dojo.html.tera
templates/pages/members/: list.html.tera  view.html.tera
