[package]
name = "jjjcaarau-webpage"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
dotenv = "*"
chrono = { version = "*", features = ["serde"] }
derivative = "*"
rocket = "*"
rocket_contrib = { version = "*", default-features = false, features = ["tera_templates", "serve", "json"] }
serde = "*"
serde_derive = "*"