[package]
name = "jjjcaarau-webpage"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
dotenv = "*"
chrono = { version = "*", features = ["serde"] }
derivative = "*"
rocket = "*"
rocket_contrib = { version = "*", default-features = false, features = ["tera_templates", "serve", "json"] }
serde = "1.0.101"
serde_derive = "1.0.101"
itertools = "*"
pulldown-cmark = { version = "0.5.3", default-features = false }
config = "0.9"
log = { version = "0.4", features = ["serde"] }
lazy_static = "1.3.0"
pbkdf2 = "0.3.0"
uuid = { version = "*", features = ["v4"] }
native-tls = "*"
lettre = "0.9"
lettre_email = "0.9"
structopt = "0.3.3"
bufstream = "0.1.4"
mime = "0.3.13"
tera = "0.11"