[package]
name = "jjjcaarau-webpage"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
dotenv = "0.15.0"
chrono = { version = "0.4.9", features = ["serde"] }
derivative = "1.0.3"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["tera_templates", "serve", "json"] }
serde = "1.0.101"
serde_derive = "1.0.101"
itertools = "0.8.1"
pulldown-cmark = { version = "0.5.3", default-features = false }
config = "0.9"
log = { version = "0.4", features = ["serde"] }
lazy_static = "1.3.0"
pbkdf2 = "0.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
native-tls = "0.2.3"
lettre = "0.9"
lettre_email = "0.9"
structopt = "0.3.3"
bufstream = "0.1.4"
mime = "0.3.13"
tera = "0.11"
simple_excel_writer = "0.1.5"