[package]
name = "jjjcaarau-webpage"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "1.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
dotenv = "0.15.0"
chrono = { version = "0.4.9", features = ["serde"] }
derivative = "2.1.1"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["tera_templates", "serve", "json"] }
serde = "1.0.116"
serde_derive = "1.0.116"
itertools = "0.9.0"
pulldown-cmark = { version = "0.8.0", default-features = false }
config = "0.10.1"
log = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
pbkdf2 = "0.5.0"
uuid = { version = "0.8.1", features = ["v4"] }
native-tls = "0.2.4"
lettre = { version = "0.10.0-alpha.2" }
lettre_email = "0.9"
structopt = "0.3.18"
bufstream = "0.1.4"
mime = "0.3.16"
tera = "1.5.0"
base64 = "0.13.0"
simple_excel_writer = "0.1.7"